# diffprep

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
src/diffprep/: __init__.py  cli.py  types.py
src/diffprep/cli/: app.py  completion.py  enums.py  io.py  models.py  prompting.py
src/diffprep/core/: __init__.py  configs.py  logger.py
src/diffprep/processors/: __init__.py  _registry.py  json.py  registry.py  xml.py
tests/: conftest.py
tests/cli/: test_app.py
tests/processors/: test_json.py  test_json_files.py
