[project]
name = "diffprep"
version = "0.1.0"
description = "Command-line JSON and XML diff preprocessor."
readme = "README.md"
authors = [
	{ name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
	"lxml>=6.0.2",
	"pydantic-settings>=2.13.1",
	"typer>=0.24.1",
]
license = {file = "LICENSE"}

[project.scripts]
diffprep = "diffprep.cli.app:app"

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"hypothesis[cli]>=6.151.9",
	"pre-commit>=4.5.1",
	"pytest>=9.0.2",
	"ruff>=0.15.5",
	"ty>=0.0.21",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RET", "RUF", "PTH", "ARG", "DTZ", "ICN", "T201",    "ANN",
	"ANN401"
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.13"

[tool.diffprep.normalize]
trailing_newline = true

[tool.diffprep.json]
drop_keys = ["timestamp", "updatedAt", "generatedAt", "version"]
indent = 4
sort_keys = true
ensure_ascii = false
style = "pretty"

[tool.diffprep.xml]
drop_tags = ["metadata"]
drop_attrs = ["version", "updatedAt"]
indent = 2
pretty = true
declaration = false
sort_attrs = true
strip_text = true
